# vikunja-rust-mcp

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md
.github/workflows/: build.yml
src/: config.rs  dates.rs  error.rs  http.rs  lib.rs  main.rs  metrics.rs  sandbox.rs  schema.rs
src/mcp/: mod.rs  resources.rs  server.rs  tools.rs
src/transfer/: export.rs  import.rs  mod.rs
src/vikunja/: client.rs  mod.rs  models.rs  pagination.rs
tests/: cli_tests.rs  client_tests.rs  http_tests.rs  live_integration.rs  tools_tests.rs
tests/common/: mod.rs
