[package]
name = "vikunja-rust-mcp"
version = "0.1.0"
edition = "2024"
description = "Model Context Protocol server for Vikunja (projects, tasks, labels, comments, attachments, users, teams)"
license = "MIT"
repository = "https://github.com/brianluby/vikunja-rust-mcp"
keywords = ["mcp", "vikunja", "model-context-protocol"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.102"
axum = "0.8.9"
base64 = "0.22.1"
chrono = { version = "0.4.45", default-features = false, features = ["std", "clock"] }
clap = { version = "4.6.1", features = ["derive", "env"] }
reqwest = { version = "0.13.4", default-features = false, features = ["json", "multipart", "rustls", "query", "http2"] }
rmcp = { version = "1.7.0", features = ["transport-io", "transport-streamable-http-server", "schemars"] }
schemars = "1.2.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
url = "2.5.8"

[dev-dependencies]
chrono = { version = "0.4.45", default-features = false, features = ["std", "clock"] }
rmcp = { version = "1.7.0", features = ["client"] }
tempfile = "3.27.0"
wiremock = "0.6.5"
